Import of Saxon 8.3.  Only change was to rename dir from net/sf to org/orbeon.  No file content was changed.