@@ -5,12 +5,13 @@ import net.sf.saxon.om.NamePool;
 import net.sf.saxon.om.XMLChar;
 import net.sf.saxon.style.StandardNames;
 import net.sf.saxon.tinytree.CharSlice;
+import net.sf.saxon.trans.XPathException;
 import net.sf.saxon.type.ValidationException;
-import net.sf.saxon.xpath.XPathException;
 import org.xml.sax.*;
 import org.xml.sax.ext.LexicalHandler;
 
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /**
   * ReceivingContentHandler is a glue class that provides a standard SAX ContentHandler
@@ -269,7 +270,7 @@ public class ReceivingContentHandler
                 } else {
                     // some parsers allow through PI names containing colons
                     if (!XMLChar.isValidNCName(name)) {
-                        throw new SAXException("Invalid processing instruction name (" + name + ")");
+                        throw new SAXException("Invalid processing instruction name (" + name + ')');
                     }
                 	receiver.processingInstruction(name, remainder, 0, 0);
                 }
@@ -360,9 +361,9 @@ public class ReceivingContentHandler
         if (locator!=null) {
             try {
                 String baseURI = locator.getSystemId();
-                URL absoluteURI = new URL(new URL(baseURI), systemId);
+                URI absoluteURI = new URI(baseURI).resolve(systemId);
                 uri = absoluteURI.toString();
-            } catch (Exception err) {}
+            } catch (URISyntaxException err) {}
         }
         try {
             receiver.setUnparsedEntity(name, uri, publicId);
